--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,8 +4,8 @@
 // GENERAL
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0px !important;
+  padding: 0px !important;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -37,26 +37,9 @@ code {
   margin: 1rem 0;
 }
 
-// SVG
-.modal-header .closing-square {
-  position: relative;
-  //left: 93%; // 93
-  right: -295px;
-  top: -25px;
-  opacity: 1;
-  background-color: white;
-  @media screen and (min-width: 480px) {
-  left: 95%;
-  //right: -300px;
-  }
-}
-
-
-
 // FOR MAP
 .mapboxgl-ctr .mapboxgl-ctrl-zoom-in .mapboxgl-ctrl-icon button {
   width: 100%;
   height: 100%;
 }
-
 
